Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </article>
 
     <article class="project-card">
-      <img src="../Assets/project4.jpg" alt="Studio Office">
+      <img src="Assets/project4.jpg" alt="Studio Office">
 
       <div class="project-overlay">
         <span class="project-index">02</span>
@@ -206,7 +206,7 @@
     </article>
 
     <article class="project-card">
-      <img src="../Assets/project3.jpg" alt="Hotel Lobby">
+      <img src="Assets/project3.jpg" alt="Hotel Lobby">
 
       <div class="project-overlay">
         <span class="project-index">03</span>
@@ -323,10 +323,10 @@
     </div>
 
     <div class="process-media">
-      <img src="../Assets/project7.jpg" class="main-img" alt="">
+      <img src="Assets/project7.jpg" class="main-img" alt="">
       <div class="side-images">
-        <img src="../Assets/project4.jpg" alt="">
-        <img src="../Assets/project6.png" alt="">
+        <img src="Assets/project4.jpg" alt="">
+        <img src="Assets/project6.png" alt="">
       </div>
     </div>
   </div>
@@ -345,7 +345,7 @@
     </div>
 
     <div class="process-media">
-      <img src="../Assets/project5.jpeg" class="single-img" alt="">
+      <img src="Assets/project5.jpeg" class="single-img" alt="">
     </div>
   </div>
 
@@ -363,7 +363,7 @@
     </div>
 
     <div class="process-media">
-      <img src="../Assets/project3.jpg" class="single-img" alt="">
+      <img src="Assets/project3.jpg" class="single-img" alt="">
     </div>
   </div>
 
@@ -493,3 +493,4 @@
 <script src="Home.js"></script>
 </body>
 </html>
+
