--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <div class="projects-grid">
 
     <article class="project-card">
-      <img src="../Assets/project7.jpg" alt="Westlands Residence">
+      <img src="Assets/project7.jpg" alt="Westlands Residence">
 
       <div class="project-overlay">
         <span class="project-index">01</span>
@@ -493,4 +493,5 @@
 <script src="Home.js"></script>
 </body>
 </html>
+
 
